# IntelligenceQuest

./: .gitignore  CMakeLists.txt  README.md
include/glad/src/: glad.c
res/data/: cache.json  camera.json  collision.json  controller.json  game.json  player.json  save.json  shader.json  spritesheet.json
res/data/blocks/: sign.json  speech.json  thoughts.json
res/data/combat/: camera.json  player.json  spritesheet-combat.json  violence.json  wacky.json  weak.json
res/data/fonts/: gilsans_alpha_no_outline.json  gilsans_encoded_glyph_and_outline.json  gilsans_packed_text_with_outline.json  gilsans_packed_text_with_outline_2.json
res/data/gamestates/: debug.json  textbox.json
res/data/house/: spritesheet-inside.json  tileset-inside.json
res/data/overworld/: npc-brunis.json  npc-fighter.json  npc-long_arms.json  npc-square.json  npc-weak.json  object-evil_house.json  object-girlfriend_house.json  object-higher_realm_house.json  object-mud.json  object-sign_house_appearing.json  object-sign_welcome.json  object-stupid_house.json  object-weak_house.json  spritesheet-outside.json  tilemap-outside.json  tileset-outside.json
res/data/templates/: font.tmpl  gamestate.tmpl  load_textbox.tmpl  menu.tmpl  npc.tmpl  object.tmpl  save.tmpl  spritesheet.tmpl  textbox.tmpl  tilemap.tmpl  tileset.tmpl  warp.tmpl
res/data/textbox/: menu_prompt_16x5x7.json  prompt_16x7x5.json  (+3 more)
res/shaders/: color.fs  color.vs
src/: CMakeLists.txt  fixed_splay_array.h  game.cpp  game.h  glyph.h  json_template.h  json_to.cpp  json_to.h  logger.cpp  logger.h  main.cpp  rect.h  ring.h  splay_array.h  switch_ring.h  templates.h  text.h
src/command/: command-add_colliders.h  command-add_flag.h  command-add_intelligence.h  command-add_kerning.h  command-attack.h  command-backtrack.h  command-change_state.h  command-create_components.h  command-delay_cycles.h  command-delay_time.h  command-exit_game.h  command-init_quadtree.h  command-jump.h  command-load_files.h  command-move.h  command-navigate_textbox.h  command-normalize_srcs.h  command-parse_json_template.h  command-pause.h  command-play_animation.h  command-print_gamestate.h  command-projectile.h  command-repeated_event.h  command-resolve-displace.h  command-resolve-message.h  command-save_state.h  command-series.h  command-shield.h  command-simultaneous.h  command-smart_enough.h  command-static_move.h  command-update_components.h  command-update_message.h  command-update_navigate.h  command-update_options.h  command-update_speech_arrow.h  command-zoom.h  command.h
src/ec/: entity.h
src/ec/component/: component-animation.h  component-animation_map.h  component-box.h  component-cache.h  component-collider.cpp  component-collider.h  component-collider_mask.h  component-font_map.h  component-hitboxes.h  component-intelligence.h  component-json_template_map.h  component-old_renderer.cpp  component-old_renderer.h  component-pathway.cpp  component-pathway.h  component-position_map.h  component-quadtree.h  component-rectangle.h  component-renderer.h  component-shader.cpp  component-shader.h  component-template.h  component-texture.cpp  component-texture.h  component-tilemap.cpp  component-tilemap.h  component-tileset.h  component-vec2.h  component.h
src/ec/component/block/: component-block-animation.h  component-block-box.h  component-block-dynamic_text.h  component-block-image.h  component-block-options-horizontal.h  component-block-options-vertical.h  component-block-options.h  component-block-text.h  component-block.h
src/ec/component/collider/: component-collider.cpp  component-collider.h
src/ec/component/controller/: component-controller-keyboard.h  component-controller.h
src/ec/component/factory/: component-factory-command_map.cpp  component-factory-command_map.h  component-factory-create_component_map.cpp  component-factory-create_component_map.h  component-factory.h
src/ec/component/gjk/: component-gjk-aabb.h  component-gjk-circle.h  component-gjk-ellipse.h  component-gjk-line_segment.h  component-gjk-point.h  component-gjk-polygon.h  component-gjk.h
src/ec/component/material/: component-material-font.h  component-material-sprite.h  component-material.h
src/ec/component/src/: component-src-bm_font.h  component-src-flex.h  component-src-texture_packer_gui.h  component-src-transform.h  component-src.h
src/ec/component/system/: component-system-animate.h  component-system-broad_phase_collision.h  component-system-camera_block_draw.h  component-system-camera_draw.h  component-system-check_action.h  component-system-combat-controller.h  component-system-combat-gravity_physics.h  component-system-combat_ability_factory.h  component-system-execute_json.h  component-system-insert_colliders.h  component-system-navigate-fight.h  component-system-navigate-horizontal.h  component-system-navigate-message.h  component-system-navigate-vertical.h  component-system-navigate.h  component-system-npc_move.h  component-system-static_block_draw.h  component-system-static_draw.h  component-system-text_draw.h  component-system-tilemap_draw.h  component-system-zoom_camera_draw.h  component-system.h
src/ec/component/system/render/: component-system-camera_block_draw.h  component-system-camera_draw.h  component-system-static_block_draw.h  component-system-static_draw.h  component-system-tilemap_draw.h  component-system-zoom_camera_draw.h
src/ec/component/system/update/: component-system-animate.h  component-system-animate_move.h  component-system-broad_phase_collision.h  component-system-camera.h  component-system-check_action.h  component-system-clear_quad_tree.h  component-system-combat-controller.h  component-system-combat-gravity_physics.h  component-system-combat-transformations.h  component-system-combat_collisions.h  component-system-controller_change_direction.h  component-system-insert_colliders.h  component-system-move.h  component-system-narrow_phase_collision.h  component-system-navigate-fight.h  component-system-navigate-horizontal.h  component-system-navigate-message.h  component-system-navigate-vertical.h  component-system-npc_move.h
(+38 files in other folders)
